--- a/css/f1.css
+++ b/css/f1.css
@@ -1,5 +1,5 @@
 h1{
-    color:#000000;
+    color:#ffffff;
     background-image: url("../images/1.jpg");
     background-size: 100%;
     margin: 10px 10px 10px 10px;
